No margin on footer line, else it overflows out site of footer container and goes on top of toggle buttons which can no longer be clicked

--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -1710,7 +1710,7 @@ p.error em {
 	width:880px;
 	height: 2px;
 	background-color: #D9D9D9;
-	margin-top:100px;
+	margin-top:0px;
 }
 .no_data {
 	margin-left: 30px;
